# ChangeLog for dev-embedded/avr-libc
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-embedded/avr-libc/ChangeLog,v 1.34 2006/06/25 10:52:59 brix Exp $

  25 Jun 2006; Henrik Brix Andersen <brix@gentoo.org>
  -avr-libc-1.4.3.ebuild:
  Pruned old version.

  09 Jun 2006; Markus Rothe <corsair@gentoo.org> avr-libc-1.4.4.ebuild:
  Stable on ppc64

  26 May 2006; Henrik Brix Andersen <brix@gentoo.org> avr-libc-1.4.4.ebuild:
  Stable on x86.

*avr-libc-1.4.4 (21 Apr 2006)

  21 Apr 2006; Henrik Brix Andersen <brix@gentoo.org>
  +avr-libc-1.4.4.ebuild:
  Version bump.

  30 Mar 2006; Henrik Brix Andersen <brix@gentoo.org>
  -avr-libc-1.4.0.ebuild, -avr-libc-1.4.1.ebuild, -avr-libc-1.4.2.ebuild:
  Pruned old ebuilds.

  27 Feb 2006; Markus Rothe <corsair@gentoo.org> avr-libc-1.4.3.ebuild:
  Stable on ppc64

  23 Feb 2006; Henrik Brix Andersen <brix@gentoo.org> avr-libc-1.4.3.ebuild:
  Stable on x86.

*avr-libc-1.4.3 (23 Jan 2006)

  23 Jan 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  +avr-libc-1.4.3.ebuild:
  New upstream version

*avr-libc-1.4.2 (07 Jan 2006)

  07 Jan 2006; Henrik Brix Andersen <brix@gentoo.org>
  +avr-libc-1.4.2.ebuild:
  Version bump.

  31 Dec 2005; Markus Rothe <corsair@gentoo.org> avr-libc-1.4.0.ebuild:
  Stable on ppc64

*avr-libc-1.4.1 (30 Dec 2005)

  30 Dec 2005; Henrik Brix Andersen <brix@gentoo.org>
  +avr-libc-1.4.1.ebuild:
  Version bump.

  30 Dec 2005; Henrik Brix Andersen <brix@gentoo.org> avr-libc-1.4.0.ebuild:
  Stable on x86.

  18 Dec 2005; Markus Rothe <corsair@gentoo.org> avr-libc-1.2.6.ebuild:
  Stable on ppc64

  14 Dec 2005; Henrik Brix Andersen <brix@gentoo.org>
  -avr-libc-1.2.3.ebuild:
  Pruned old ebuilds.

  13 Dec 2005; Henrik Brix Andersen <brix@gentoo.org> avr-libc-1.2.6.ebuild:
  Stable on x86.

  24 Nov 2005; Markus Rothe <corsair@gentoo.org> avr-libc-1.2.5-r1.ebuild:
  Stable on ppc64

*avr-libc-1.4.0 (20 Nov 2005)
