@@ -1,6 +1,9 @@
 # ChangeLog for dev-embedded/avr-libc
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-embedded/avr-libc/ChangeLog,v 1.34 2006/06/25 10:52:59 brix Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-embedded/avr-libc/ChangeLog,v 1.35 2006/07/04 17:03:09 brix Exp $
+
+  04 Jul 2006; Henrik Brix Andersen <brix@gentoo.org> avr-libc-1.4.4.ebuild:
+  Added check for avr-gcc, bug #134738.
 
   25 Jun 2006; Henrik Brix Andersen <brix@gentoo.org>
   -avr-libc-1.4.3.ebuild:
